Fix dark mode disabled button styles

--- a/angular/_darkTheme.scss
+++ b/angular/_darkTheme.scss
@@ -175,9 +175,11 @@
     .mat-icon-button.mat-button-disabled {
         color: map-get($foreground, disabled);
     }
-    .mat-stroked-button.mat-button-disabled {
-        color: rgba(map-get($pxb-black, 300), 0.36);
-        border-color: rgba(map-get($pxb-black, 300), 0.36);
+    .mat-stroked-button, .mat-button {
+        &.mat-button-disabled.mat-button-disabled {
+            color: rgba(map-get($pxb-black, 300), 0.36);
+            border-color: rgba(map-get($pxb-black, 300), 0.36);
+        }
     }
 
     /* Tabs */
